Added favicon of fadey.

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <base href="/"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Replace favicon with FADE blimp -->
-    <!-- <link rel="icon" href="./dist/{}.png"> -->
+    <link rel="icon" href="./dist/fadey.png">
   </head>
   <body style="margin: 0; padding: 0;">
     <div id='root' style="margin: 0; padding: 0;"></div>
